--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,23 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: "pixellet";
+  src: url("./fonts/pixellet.ttf");
+  unicode-range: unset;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "pixellet";
+  background-color: #06CED9;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.e-multiselect.e-input-group .e-multi-select-wrapper {
+  background-color: red;
 }
-
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
 }
